<resources>
    <string name="app_name">TruckTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_pref_name">TRUCKTRACK_APP_PREF</string>
    <string name="enter_credential_to_login">Enter credential to login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password_with_question_mark">Forget Password?</string>
    <string name="continue_string">Continue</string>
    <string name="sign_up_title">Don’t have an account? <b>Signup</b></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_condition"><u>Terms of Use</u></string>
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="no_internet_connection">Please check your internet connection and try again!</string>
    <string name="web_loader">Web Loader</string>
    <string name="signup">Signup</string>
    <string name="signup_subtitle">Fill out all required information to create an account</string>
    <string name="name">Name</string>
    <string name="i_agree_with_terms_and_conditions_and_privacy_policy">I agree with Terms &amp; Conditions and Privacy Policy.</string>
    <string name="login_title">Already have an account? <b>Login</b></string>
    <string name="upload_image">Upload Image</string>
    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="core_fundamental_permissions_title">Core fundamental are based on these permissions</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="necessary_permissions_title">You need to allow necessary permissions in Settings manually</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_email_id">Please enter valid email id</string>
    <string name="please_enter_valid_password">Password must have at least one uppercase letter, one digit, one special character, and be 6–15 characters long</string>
    <string name="required_terms_privacy">Please accept Terms &amp; Condition and Privacy Policy to get started</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_email_id_to_forget_password">Enter email id to forget password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_verification_description">Please enter 4 digit code send to</string>
    <string name="did_not_receive">Did not receive the OTP code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="user_not_verified">User is not verified, please verify user first!</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="resend_in">Resend in </string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_same_password">New password and confirm password must be same</string>
    <string name="drawable_resource_not_found">Drawable resource not found</string>
    <string name="location_reached">Location Reached!!</string>
    <string name="empty" />
    <string name="pause_trip">Pause Trip</string>
    <string name="resume_trip">Resume Trip</string>
    <string name="paused">Paused</string>
    <string name="have_we_paused_our_trip_to_fill_the_truck_with_fuel">Have we paused our trip to fill the truck with fuel?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tracking_stopped_destination_reached">Tracking stopped — destination reached!</string>
    <string name="end_trip">End Trip</string>
    <string name="add_fuel_entry">Add Fuel Entry</string>
    <string name="replace_image_title">Are you sure you want to\nreplace this <b>image</b>?</string>
    <string name="replace"><b>Replace</b></string>
    <string name="please_enter_a_valid_quantity">Please enter a valid quantity</string>
    <string name="please_enter_a_valid_price_per_liter">Please enter a valid rate per liter</string>
    <string name="please_enter_a_valid_total_price">Please enter a valid total amount</string>
    <string name="please_upload_image_first">Please upload image first</string>
    <string name="trip_summary">Trip Summary</string>
    <string name="quantity_liters">Quantity (Liters)</string>
    <string name="rate_per_liter">Rate per Liter</string>
    <string name="total_amount">Total Amount</string>
    <string name="fuel_meter_image">Fuel Meter Image</string>
    <string name="upload_fuel_meter_image">Upload Fuel Meter Image</string>
    <string name="starting_point">Starting Point</string>
    <string name="drop_off_location">Drop-off Location</string>
    <string name="distance_traveled">Distance Traveled</string>
    <string name="distance_covered">Distance Covered (KM)</string>
    <string name="fuel_used_l">Fuel Used (L)</string>
    <string name="total_fuel_expense">Total Fuel Expense</string>
    <string name="fuel_efficiency_km_l">Fuel Efficiency (KM/L)</string>
    <string name="total_cargo_weight_ton">Total Cargo Weight (TON)</string>
</resources>