<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_16sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_13sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_10sdp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_pick_gallery" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/upload_image"
            android:textSize="@dimen/_16ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="#DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_camera"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="#DDDDDD" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_gallery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_gallery"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>