<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.forgot_password.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lbl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/enter_email_id_to_forget_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/email_id"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:backgroundTint="@color/white"
        android:drawablePadding="@dimen/_8sdp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/edt_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_6sdp"
        android:textColor="@color/error_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="@id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:backgroundTint="@color/yellowColor"
        android:text="@string/continue_string"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email_error" />

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:indeterminateTint="@color/blackTextColor"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/button_continue"
        app:layout_constraintEnd_toEndOf="@id/button_continue"
        app:layout_constraintStart_toStartOf="@id/button_continue"
        app:layout_constraintTop_toTopOf="@id/button_continue" />

</androidx.constraintlayout.widget.ConstraintLayout>