<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.verify_otp.VerifyOtpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/verify_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/otp_verification_description"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title"
        tools:text="abc123@gmail.com" />

    <com.mukeshsolanki.OtpView
        android:id="@+id/otp_view"
        style="@style/CustomTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:alpha="1"
        android:inputType="number"
        android:itemBackground="@drawable/bg_otp_item"
        android:textColor="@color/white"
        android:focusableInTouchMode="true"
        app:OtpHideLineWhenFilled="true"
        app:OtpItemHeight="@dimen/_45sdp"
        app:OtpItemRadius="18dp"
        app:OtpItemSpacing="@dimen/_15sdp"
        app:OtpItemWidth="@dimen/_45sdp"
        app:OtpLineColor="@color/grey_light_text_color"
        app:OtpLineWidth="1dp"
        app:OtpState_filled="true"
        app:OtpViewType="rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/did_not_receive"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/button_verify"
        app:layout_constraintEnd_toStartOf="@id/tv_resend"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:text="@string/resend_otp"
        android:textColor="@color/yellowColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_no_receive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_no_receive"
        app:layout_constraintTop_toTopOf="@id/tv_no_receive" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/pb_resend_otp"
        style="@style/SpinKitView.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:visibility="gone"
        app:SpinKit_Color="@color/yellowColor"
        app:layout_constraintBottom_toBottomOf="@id/tv_no_receive"
        app:layout_constraintStart_toEndOf="@id/tv_no_receive"
        app:layout_constraintTop_toTopOf="@id/tv_no_receive" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_verify"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:backgroundTint="@color/yellowColor"
        android:text="@string/verify"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>